Update the readme to include screenshots. #2

--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
                 <label for="breakDurationInput">Break Duration (minutes):</label>
                 <input type="number" id="breakDurationInput" value="5" min="1">
             </div>
-            <div class="setting-item">
+            <div class="setting-item" style="display:none">
                 <label>Blocking Mode:</label>
                 <div class="blocking-mode-options">
                     <input type="radio" id="blockModeRedirect" name="blockingMode" value="redirect">
